# chandra

./: .flake8  .gitignore  AUTHORS.md  BRIEF.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE.md  README.md  TODO_DEFERRED.md  metadata-matching-dirs.py  pyproject.toml  runtests.py
.github/workflows/: ci.yml  coverage.yml
briefs/: BRIEF.md  concordance-search.md  palimpsest-scrub.md  rosetta-metadata-injector.md
chandra/: __init__.py  analyze.py  cli.py  concordance.py  hashing.py  inputs.py  palimpsest.py  pngchunks.py  rosetta.py  synthesize.py  xmp.py
igmt/: __init__.py  analyze.py  cli.py  concordance.py  hashing.py  rosetta.py  synthesize.py
tests/: test_analyze.py  test_cli.py  test_eject.py  test_fixtures.py  test_hashing.py  test_inputs.py  test_palimpsest.py  test_pngchunks.py  test_search.py  test_synthesize.py  test_xmp.py
